# nexo-retailer-protocol

./: .gitignore  Cargo.toml  FIELD_REGISTRY.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/workflows/: no_std.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/02-core-library/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-VERIFICATION.md
.planning/phases/03-transport-layer/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-04-SUMMARY.md  03-06-SUMMARY.md
.planning/phases/04-client-api/: 04-01-SUMMARY.md  04-04-SUMMARY.md  04-05-SUMMARY.md
.planning/phases/05-server-api-reliability/: 05-06-SUMMARY.md
.planning/phases/05.1-fix-server-framing/: 05.1-01-SUMMARY.md
.planning/phases/06-testing-verification/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-05a-SUMMARY.md
examples/: README.md  echo_server.rs  embassy_client.rs  tokio_client.rs  tokio_server_with_logging.rs
proto/: FIELD_ASSIGNMENTS.md  casp.001.proto  casp.002.proto  casp.003.proto  casp.004.proto  casp.005.proto  casp.006.proto  casp.007.proto  casp.008.proto  casp.009.proto  casp.010.proto  casp.011.proto  casp.012.proto  casp.013.proto  casp.014.proto  casp.015.proto  casp.016.proto  casp.017.proto  common.proto
scripts/: audit_std_leak.sh  run-timed-tests.sh
src/: lib.rs
src/client/: builder.rs  embassy.rs  mod.rs  reconnect.rs  std.rs  timeout.rs
src/codec/: limits.rs  mod.rs
src/error/: codes.rs  mod.rs
src/features/: mod.rs  no_std.rs  std.rs
src/protos/: .gitkeep  nexo.casp.v1.rs
src/server/: connection.rs  dedup.rs  dispatcher.rs  handler.rs  heartbeat.rs  mod.rs  std_impl.rs
src/transport/: embassy.rs  framing.rs  mod.rs  tokio.rs
src/validate/: constraints.rs  currency.rs  mod.rs  strings.rs
tests/: client_integration.rs  client_server_e2e_integration.rs  cross_runtime_test.rs  framing_test.rs  mock_server.rs  server_concurrent_integration.rs  server_dedup_integration.rs  server_dispatcher_integration.rs  server_heartbeat_integration.rs  server_integration.rs  tokio_timeout_test.rs
tests/transport/: connection_lifecycle.rs  embassy_test.rs  tokio_test.rs
tests/unit/: codec_roundtrip.rs  serialization_edge_cases.rs  validation.rs
