[package]
name = "nexo-retailer-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Nexo Retailer Protocol Contributors"]
description = "Rust implementation of Nexo Retailer Protocol (ISO 20022 CASP) with std and no_std support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/nexo-retailer-protocol"
keywords = ["nexo", "payment", "iso20022", "casp", "protobuf"]
categories = ["no-std", "parser-implementations", "api-bindings"]

# Feature flags for no_std compatibility
# - default: Enable std for standard environment builds
# - std: Enables std library support (prost with std)
# - alloc: Enables allocations for no_std environments with heap
# - defmt: Enables embedded logging support
# All features are additive - no negative feature names
[features]
default = ["std"]
std = ["prost/std"]
alloc = []
defmt = ["dep:defmt"]

# Dependencies with no_std support
# All dependencies use default-features = false to ensure no_std compatibility
# prost: protobuf codec with no_std support
# defmt: embedded logging (optional, for no_std environments)
# heapless: data structures without heap allocation (optional)
[dependencies]
prost = { version = "0.14", default-features = false, features = ["derive"] }
defmt = { version = "0.3", optional = true }
heapless = { version = "0.8", optional = true }

[build-dependencies]
prost-build = "0.14"

# Dev dependencies for testing (Phase 2+)
[dev-dependencies]
# prost-types for testing framing layer
prost-types = "0.14"
# futures executor for running async tests in no_std environment
futures-executor = "0.3"
