[package]
name = "nexo-retailer-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Nexo Retailer Protocol Contributors"]
description = "Rust implementation of Nexo Retailer Protocol (ISO 20022 CASP) with std and no_std support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/nexo-retailer-protocol"
keywords = ["nexo", "payment", "iso20022", "casp", "protobuf"]
categories = ["no-std", "parser-implementations", "api-bindings"]

# Feature flags for no_std compatibility
# - default: Enable std for standard environment builds
# - std: Enables std library support (prost with std)
# - alloc: Enables allocations for no_std environments with heap
# - defmt: Enables embedded logging support
# All features are additive - no negative feature names
[features]
default = ["std"]
std = ["prost/std", "tokio", "tokio-util", "rand", "uuid/std", "async-trait", "alloc", "tracing", "tracing-subscriber"]
alloc = []
defmt = ["dep:defmt"]

# Embassy embedded runtime (no_std)
embassy = [
    "embassy-executor",
    "embassy-time",
    "embassy-net",
    "embassy-futures",
    "defmt",
]

# Dependencies with no_std support
# All dependencies use default-features = false to ensure no_std compatibility
# prost: protobuf codec with no_std support
# defmt: embedded logging (optional, for no_std environments)
# heapless: data structures without heap allocation (optional)
# tokio: async runtime for std environments (optional)
# embassy-*: async runtime for no_std embedded environments (optional)
[dependencies]
prost = { version = "0.14", default-features = false, features = ["derive"] }
defmt = { version = "0.3", optional = true }
heapless = { version = "0.8", optional = true }
tokio = { version = "1", optional = true, features = ["net", "time", "io-util", "macros", "rt-multi-thread"], default-features = false }
tokio-util = { version = "0.7", optional = true, features = ["codec"], default-features = false }
rand = { version = "0.8", optional = true }
uuid = { version = "1.0", optional = true, default-features = false, features = ["v4"] }
async-trait = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true, default-features = false }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "fmt"], default-features = false }
embassy-executor = { version = "0.9", optional = true, default-features = false, features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5", optional = true, default-features = false, features = ["defmt"] }
embassy-net = { version = "0.8", optional = true, default-features = false, features = ["tcp", "udp", "dhcpv4", "proto-ipv4", "medium-ethernet"] }
embassy-futures = { version = "0.1", optional = true, default-features = false }

[build-dependencies]
prost-build = "0.14"

# Examples
[[example]]
name = "tokio_client"
path = "examples/tokio_client.rs"
required-features = ["std"]

[[example]]
name = "embassy_client"
path = "examples/embassy_client.rs"
required-features = ["embassy"]

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = ["std"]

[[example]]
name = "tokio_server_with_logging"
path = "examples/tokio_server_with_logging.rs"
required-features = ["std"]

# Integration tests
[[test]]
name = "codec_roundtrip"
path = "tests/unit/codec_roundtrip.rs"
required-features = ["alloc"]

[[test]]
name = "validation"
path = "tests/unit/validation.rs"
required-features = ["alloc"]

[[test]]
name = "client_integration"
path = "tests/client_integration.rs"
required-features = ["std"]

# Transport tests
[[test]]
name = "transport_tokio_test"
path = "tests/transport/tokio_test.rs"
required-features = ["std"]

[[test]]
name = "transport_embassy_test"
path = "tests/transport/embassy_test.rs"
required-features = ["embassy"]

[[test]]
name = "transport_connection_lifecycle"
path = "tests/transport/connection_lifecycle.rs"
required-features = ["std"]

# Dev dependencies for testing (Phase 2+)
[dev-dependencies]
# prost-types for testing framing layer
prost-types = "0.14"
# futures executor for running async tests in no_std environment
futures-executor = "0.3"
# futures for StreamExt trait in integration tests
futures = "0.3"
# env_logger for logging in integration tests
env_logger = "0.11"
# proptest for property-based testing (Phase 6)
proptest = "1.4"
# proptest-derive for Arbitrary trait derivation
proptest-derive = "0.4"
# paste for macro identifier generation
paste = "1.0"
